# lockbox

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh
app/: Cargo.lock.bak8  Cargo.toml
app/client/: .Cargo.toml.swp  Cargo.toml  Cargo.toml~
app/client/src/: error.rs  lib.rs
app/server/: Cargo.toml  Cargo.toml~  Settings.toml  build.rs
app/server/src/: attestation.rs  client.rs  config.rs  db.rs  enclave.rs  error.rs  lib.rs  main.rs  server.rs
app/server/src/protocol/: attestation.rs  ecdsa.rs  enclave.rs  enclave_hello.rs  initialization.rs  mod.rs  requests.rs  transfer.rs
app/server/src/storage/: db.rs  mod.rs  storage.rs
app/shared/: Cargo.toml
app/shared/src/: lib.rs  state_chain.rs  structs.rs  util.rs
attestation/: Cargo.toml  attestation.edl
attestation/src/: func.rs  lib.rs
client/: Cargo.toml
client/src/: lib.rs
doc/: design.md  transfer.md
dummy-lb/client/src/state_entity/: transfer.rs
dummy-lb/client/wallet/: wallet.data
dummy-lb/server/: Rocket.toml  Settings.toml
dummy-lb/server/db/: IDENTITY  LOG  LOG.old.1588543994372028  LOG.old.1593462777552204  LOG.old.1594073408475877  LOG.old.1594073588907560  LOG.old.1594073852173461  LOG.old.1594074119201079  LOG.old.1594074337067095  LOG.old.1594292254448691  LOG.old.1594292452443727  LOG.old.1594292649664649  LOG.old.1594993373551397  LOG.old.1594994140524120  LOG.old.1595004740903689  LOG.old.1595261319761240  LOG.old.1595263232033273  LOG.old.1595263232047143  LOG.old.1595263232057310  LOG.old.1595263232070515  LOG.old.1595263232083029  LOG.old.1595264361024299  LOG.old.1595265345208576  LOG.old.1595277719608413  LOG.old.1595287605104895  LOG.old.1595287605114273  LOG.old.1595287759325676  LOG.old.1595287759332850  LOG.old.1595287777192008  LOG.old.1595287777197153  LOG.old.1595287885278788  LOG.old.1595287885284383  LOG.old.1595287964163389  LOG.old.1595287964169382  LOG.old.1595288071705830  LOG.old.1595289085925924  LOG.old.1595289085931602  LOG.old.1595289371768430  LOG.old.1595289439406717  LOG.old.1595289732943893  (+12 more)
dummy-lb/server/db-smt/: 000013.sst  000034.sst  000053.sst  000061.sst  000068.sst  000075.sst  IDENTITY  LOG  LOG.old.1598304311856798  LOG.old.1598304311871431  LOG.old.1598304311909912  LOG.old.1598309546934080  LOG.old.1598309546983370  LOG.old.1598309547011701  LOG.old.1598309547062226  LOG.old.1598309608647193  LOG.old.1598309608716713  LOG.old.1598309608736324  LOG.old.1598309608780038  LOG.old.1598309652656352  LOG.old.1598309652717721  LOG.old.1598309652731477  LOG.old.1598309652770198  MANIFEST-000071  OPTIONS-000067
dummy-lb/server/src/: lib.rs  server.rs
dummy-lb/server/src/protocol/: ecdsa.rs  transfer.rs
dummy-lb/server/src/storage/: db.rs  monotree.rs
enclave/: Cargo.lock.bak7  Cargo.toml  Cargo.toml~  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile
enclave/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/src/: lib.rs
init_shared/: Cargo.toml  README.md  rust-toolchain
init_shared/src/: lib.rs  main.rs
integration-tests/: Cargo.toml  README.md
integration-tests/src/: lib.rs
mainstay-init/: Cargo.toml  README.md
mainstay-init/recover/: Cargo.toml  README.md
mainstay-init/recover/src/: main.rs
mainstay-init/src/: main.rs
mainstay-signer/: .env_example  .gitignore  Cargo.toml  README.md
mainstay-signer/.cargo/: config  config.toml
mainstay-signer/integration_tests/: README.md  tx_test.py
mainstay-signer/src/: db.rs  main.rs  sealing.rs  utils.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs~  server.rs
server/src/protocol/: ecdsa.rs
server/src/storage/: db.rs.orig  mod.rs
shared/src/: #structs.rs#  error.rs.orig  structs.rs.orig  structs_flymake.rs
