[package]
name = "attestation"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[features]
default = []
use_std = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = {  rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = {  rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = {  rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tdh = {  rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_alloc = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_backtrace = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_backtrace_sys = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_build_helper = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_cov = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
##sgx_crypto_helper = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_demangle = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_libc = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_rand = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_rand_derive = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_serialize = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_serialize_derive = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_serialize_derive_internals = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tcrypto = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tcrypto_helper = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tkey_exchange = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tprotected_fs = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tse = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tseal = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tunittest = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
##sgx_ucrypto = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_unwind = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_urts = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
