[package]
name = "lockbox_enclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "lockbox_enclave"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
sgx_serialize_derive = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx", tag = "sgx_1.1.3" }
serde_cbor = { git = "https://github.com/mesalock-linux/cbor-sgx" }
libsecp256k1 = {  package = "libsecp256k1", git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx.git" }
secp256k1_sgx = { package = "secp256k1-sgx", path = "/root/deps/rust-secp256k1-sgx", features=["rand"] } 
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3" }
zeroize = "0.10"
uuid = { git = "https://github.com/mesalock-linux/uuid-sgx", features = ["v4", "serde"] }
paillier = { path = "/root/deps/rust-paillier" }

[dependencies.curv]
#git = "https://github.com/commerceblock/curv.git"
path = "/root/deps/curv"
#branch = "sgx"
features =  ["ec_secp256k1"]

[dependencies.num-integer]
git = "https://github.com/mesalock-linux/num-integer-sgx"

[dependencies.shared]
path = "../app/shared"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_trts = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

