[package]
name = "lockbox_enclave"
version = "0.1.3"
authors = ["The Teaclave Authors"]

[lib]
name = "lockbox_enclave"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
attestation = {path = "../attestation/"}
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
sgx_serialize_derive = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx", tag = "sgx_1.1.3" }
serde-big-array = { git = "https://github.com/mesalock-linux/serde-big-array-sgx", tag = "sgx_1.1.3" }
serde_cbor = { git = "https://github.com/mesalock-linux/cbor-sgx" }
libsecp256k1 = {  package = "libsecp256k1", git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx.git" }
secp256k1_sgx = {git = "https://github.com/commerceblock/rust-secp256k1-sgx.git", package = "secp256k1-sgx", features = ["rand"]}
zeroize = "1.3.0"
hex = { git = "https://github.com/mesalock-linux/rust-hex-sgx" }

uuid = { git = "https://github.com/mesalock-linux/uuid-sgx", features = ["v4", "serde"] }
paillier = { git = "https://github.com/commerceblock/rust-paillier.git", branch = "sgx" }
zk-paillier = { git = "https://github.com/commerceblock/zk-paillier.git", branch = "sgx" }
subtle = { git = "https://github.com/mesalock-linux/subtle-sgx.git", tag = "sgx_1.1.3" }
lazy_static = "1.4.0"
ecies = { git = "https://github.com/commerceblock/rs.git", branch = "sgx" }

[dependencies.either]
default-features = false
version = "1.5"

[dependencies.curv]
git = "https://github.com/commerceblock/curv.git"
#path = "/root/deps/curv"
branch = "sgx"
features =  ["ec_secp256k1"]

[dependencies.num-integer]
git = "https://github.com/mesalock-linux/num-integer-sgx"

[dependencies.num-traits]
git = "https://github.com/mesalock-linux/num-traits-sgx"

#[dependencies.shared]
#git = "https://github.com/commerceblock/lockbox.git"
#branch = "migrate"
#package = "shared"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_trts = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse = { rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tdh = {  rev="ed9e7cce4fd40efd7a256d5c4be1c5f00778a5bb", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
