[package]
name = "tests"
version = "0.1.3"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["socks", "blocking", "json"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
rand = "0.6.5"
time-test = "0.2.2"
log = "0.4"
time = "0.2.22"
env_logger = "0.7.1"
floating-duration = "0.1.2"
serial_test = "0.5.0"
bitcoin = { version = "0.25", features = [ "use-serde" ] }
subtle = "2.4.0"
hex = "0.4.2"
ecies = { git = "https://github.com/commerceblock/rs.git", branch = "rust-crypto" }

[dependencies.zk-paillier]
git = "https://github.com/commerceblock/zk-paillier"
#tag = "v0.2.8"
branch="lockbox"

[dependencies.kms]
git = "https://github.com/commerceblock/kms-secp256k1"
#tag = "v0.1.3"
branch="lockbox"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
branch="lockbox"
#tag = "v0.3.7"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
features =  ["ec_secp256k1"]
tag = "v0.2.8"

#[dependencies.centipede]
#git = "https://github.com/commerceblock/centipede"
#tag = "v0.2.9"

[dependencies.shared]
path = "../app/shared"
