[package]
name = "mainstay-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
bip32 = { version = "0.5.1", features = ["secp256k1"] }
bitcoin = "0.23.0"
btc-transaction-utils = "0.9.0"
dotenv = "0.15.0"
hex = "0.4.3"
num-bigint = "0.2.6"
secp256k1 = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
shamir_secret_sharing = "0.1.1"
