[package]
name = "server"
version = "0.1.0"
authors = [
	"Lawrence Deacon <lawrence.deacon@gmail.com>",
]
build = "build.rs"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.4.5", features = ["tls"] }
rocket_contrib = { version = "0.4.5", default-features = false,features = ["json","postgres_pool"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rusoto_dynamodb = "0.45.0"
rusoto_core = "0.45.0"
time-test = "0.2.2"
log = "0.4"
config = "0.10"
uuid = { version = "0.5", features = ["v4", "serde"] }
error-chain = "0.12.4"
failure = "0.1.8"
jsonwebtoken = "5.0.1"
hex = "0.4.2"
env_logger = "0.7.1"
log4rs = "0.13.0"
postgres = { version = "0.15.2", features = ["with-uuid","with-chrono"] }
chrono = "0.4"
serial_test = "0.5.0"
mockall = "0.8.1"
cfg-if = "0.1.10"
bitcoin = { version = "0.25", features = [ "use-serde" ] }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

[dev-dependencies]
mockito = "0.27.0"

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.2.4"

[dependencies.kms]
git = "https://github.com/commerceblock/kms-secp256k1"
tag = "v0.1.2"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
tag = "v0.2.7"

[dependencies.multi-party-eddsa]
git = "https://github.com/KZen-networks/multi-party-eddsa"
tag = "v0.2.1"

[dependencies.multi-party-schnorr]
git = "https://github.com/commerceblock/multi-party-schnorr"
tag = "v0.3.4"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
tag = "v0.2.7"
features =  ["ec_secp256k1"]

[dependencies.monotree]
git = "https://github.com/commerceblock/monotree"
tag = "0.1.3.1"
default-features = false
features=["hasher-blake3"]

[dependencies.serde_dynamodb]
git = "https://github.com/KZen-networks/serde_dynamodb"

[features]
mockdb = []

[dependencies.shared]
path = "../shared"