[package]
name = "server"
version = "0.1.4"
authors = [
	"Lawrence Deacon <lawrence.deacon@gmail.com>",
]
build = "build.rs"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies]
rocket = { tag="v0.4.5", features = ["tls"], git="https://github.com/SergioBenitez/Rocket.git"}
rocket_contrib = { tag="v0.4.5", default-features = false,features = ["json"], git="https://github.com/SergioBenitez/Rocket.git"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rusoto_dynamodb = "0.46.0"
rusoto_core = "0.46.0"
time-test = "0.2.2"
log = "0.4"
config = "0.10"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
error-chain = "0.12.4"
failure = "0.1.8"
jsonwebtoken = "5.0.1"
hex = "0.4.2"
env_logger = "0.7.1"
log4rs = "0.13.0"
chrono = "0.4"
serial_test = "0.5.0"
mockall = "0.8.1"
cfg-if = "0.1.10"
bitcoin = { version = "0.25", features = [ "use-serde" ] }
sgx_types = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_urts = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tdh = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
rocksdb= "0.15.0"
tempdir = "0.3.7"
serde_cbor = "0.11.1"
num-bigint-dig = { version = "0.6.1", features = ["serde", "rand"] }
num-traits = { version = "0.2.4" }
rand = "0.7"
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["socks", "blocking", "json"] }
floating-duration = "0.1.2"
serde-big-array = "0.3.1"

[dev-dependencies]
mockito = "0.27.0"

[dependencies.paillier]
git = "https://github.com/commerceblock/rust-paillier"
tag = "v0.3.7"

[dependencies.paillier-client]
git = "https://github.com/commerceblock/rust-paillier"
branch = "client_version_2"
package = "paillier"

[dependencies.zk-paillier]
git = "https://github.com/commerceblock/zk-paillier"
branch = "lockbox"
#tag = "v0.2.4"

[dependencies.zk-paillier-client]
git = "https://github.com/commerceblock/zk-paillier"
branch = "client_version_2"
package = "zk-paillier"

[dependencies.kms]
git = "https://github.com/commerceblock/kms-secp256k1"
#tag = "v0.1.2"
branch = "lockbox"
default-features = false

[dependencies.kms-sgx]
git = "https://github.com/commerceblock/kms-secp256k1"
branch = "client_version_2"
package = "kms"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
#tag = "v0.3.7"
branch = "lockbox"

[dependencies.multi-party-ecdsa-client]
git = "https://github.com/commerceblock/multi-party-ecdsa"
branch = "client_version_2"
package = "multi-party-ecdsa"

[dependencies.multi-party-schnorr]
git = "https://github.com/commerceblock/multi-party-schnorr"
tag = "v0.3.5"
optional = true

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
tag = "v0.2.8"
features =  ["ec_secp256k1"]

[dependencies.curv-client]
git = "https://github.com/commerceblock/curv"
branch = "client_version_2"
package = "curv"
features =  ["ec_secp256k1"]

[dependencies.monotree]
git = "https://github.com/commerceblock/monotree"
tag = "0.1.3.1"
default-features = false
features=["hasher-blake3"]

[dependencies.serde_dynamodb]
git = "https://github.com/KZen-networks/serde_dynamodb"

[features]
mockdb = []

[dependencies.shared]
path = "../shared"
